--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <h1
             class="max-w-md text-4xl font-bold text-center md:text-5xl md:text-left"
           >
-            Bring everyone together to build better products!!!
+            Bring everyone together to build better products
           </h1>
           <p class="max-w-sm text-center text-darkGrayishBlue md:text-left">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem,
