--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
     <main>
       <!-- HERO -->
       <section
+        id="hero"
         class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 pb-16 pt-20 text-center lg:pt-32"
       >
         <h1
@@ -238,7 +239,7 @@
 
       <!-- Audience -->
       <section
-        id="features"
+        id="audience"
         aria-label="Features for running your books"
         class="relative overflow-hidden bg-blue-600 pb-28 pt-20 sm:py-32"
       >
@@ -534,7 +535,7 @@
 
       <!-- Listings -->
       <section
-        id="secondary-features"
+        id="listings"
         aria-label="Features for simplifying everyday business tasks"
         class="relative overflow-hidden pb-14 pt-20 sm:pb-20 sm:pt-32 lg:pb-32"
       >
@@ -1647,10 +1648,7 @@
       </section>
 
       <!-- CTA -->
-      <section
-        id="get-started-today"
-        class="relative overflow-hidden bg-blue-600 py-32"
-      >
+      <section id="cta" class="relative overflow-hidden bg-blue-600 py-32">
         <img
           alt=""
           loading="lazy"
